# SuperMagic

./: CMakeLists.txt  README.md
SMOG/: CMakeLists.txt  build
SMOG/include/SMOG/: Shader.h  ShaderCache.h  Texture.h
SMOG/include/SMOG/Primitives/: Triangle.h
SMOG/src/SMOG/: FrameBuffer.cpp  Mesh.cpp  RenderScene.cpp  ShaderCache.cpp  Texture.cpp
SMOG/src/SMOG/DataTypes/: RGB.cpp
SMOG_app/: CMakeLists.txt  main.cpp
SMOG_app/shaders/: color.vert  textured.vert
SMRT/: CMakeLists.txt  test_image.exr
SMRT/include/SMRT/: Collider.h  DataTypes.h  SMRT.h  Scene.h  SceneObject.h
SMRT/include/SMRT/Colliders/: Sphere.h
SMRT/include/SMRT/DataTypes/: RGBA.h  Ray.h  Transform.h
SMRT/src/SMRT/: Scene.cpp  SceneObject.cpp
SMRT/src/SMRT/Colliders/: Sphere.cpp
SMRT/src/SMRT/DataTypes/: RGBA.cpp  Transform.cpp
SMRT_app/: CMakeLists.txt  main.cpp
SMSM/: CMakeLists.txt
SMSM/include/SMSM/: Component.h  Scene.h  ptr_vector.h
SMSM/src/SMSM/: Component.cpp  SceneObject.cpp  Transform.cpp
app/: CMakeLists.txt  main.cpp
app/materials/: color.mtl  color0.mtl  color1.mtl  color2.mtl  color3.mtl  debug_gbuffer.mtl  textured.mtl
app/shaders/: color.frag  color.vert  textured.frag
install/include/SMOG/: Material.h  Mesh.h  VertexArray.h  Viewport.h
install/include/SMOG/DataTypes/: RGB.h
install/include/SMSM/: DataTypes.h  SMSM.h  Transform.h
install/share/materials/: textured.mtl
install/share/shaders/: color.frag  debug_gbuffer.frag  screenspace.vert
smog/: CMakeLists.txt
smog/include/SMOG/: DataTypes.h  FrameBuffer.h  Material.h  Mesh.h  RenderScene.h  Renderable.h  SMOG.h  Shader.h  ShaderProgram.h  Texture.h  TextureCache.h  TextureFile.h  VertexArray.h  VertexBuffer.h
smog/include/SMOG/Primitives/: Quad.h
smog/src/SMOG/: FrameBuffer.cpp  Material.cpp  Mesh.cpp  Renderable.cpp  SMOG.cpp  Shader.cpp  ShaderProgram.cpp  Texture.cpp  TextureCache.cpp  TextureFile.cpp  VertexArray.cpp  VertexBuffer.cpp  Viewport.cpp
smog/src/SMOG/Primitives/: Quad.cpp  Triangle.cpp
smsm/: CMakeLists.txt
smsm/include/SMSM/: DataTypes.h  SMSM.h  SceneObject.h  Transform.h
smsm/src/SMSM/: Scene.cpp  SceneObject.cpp  Transform.cpp
